# Stator-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/fibonacci/: CMakeLists.txt  config.yaml  fibonacci.cpp
include/stator/: config.hpp  engine.hpp  reporter.hpp  serializer.hpp
src/: config.cpp  engine.cpp  reporter.cpp  serializer.cpp
